<resources>
    <string name="app_name">CIC CATalyst Core</string>
    <string name="google_api_project_number">281409659434</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kasir">Kasir</string>
    <string name="pelayan">Pelayan</string>
    <string name="admin">Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_kasir">KasirActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tambah_data_pelanggan">Tambah Data Pelanggan</string>
    <string name="id_pelanggan">id pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="tambah">TAMBAH</string>

    <string name="application_id">2E945EB9-5AAB-9DD3-FF6B-944234052D00</string>
    <string name="secret_key">BD2D4FCD-92D0-32EF-FF9C-9A085CFFC200</string>
    <string name="jam">Jam</string>
    <string name="status">Status Pemesanan</string>
    <string name="detail_reservasi">Detail Reservasi</string>
    <string name="logout">Logout</string>
    <string name="batal">BATAL</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No. HP</string>
    <string name="email">Email</string>
    <string name="reservasi_tempat">Reservasi Tempat</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="durasi">Durasi</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="tambah_data_pesanan">Tambah Data Pesanan</string>
    <string name="eskrim">Es Krim</string>
    <string name="flakes">Flakes</string>
    <string name="rasa_es_krim">Rasa Es Krim</string>
    <string name="topping">Topping</string>
    <string name="minuman">Minuman</string>
    <string name="tambah_es_krim">Tambah Es Krim</string>
    <string name="tambah_minuman">Tambah Minuman</string>
    <string name="data_pengunjung_pesanan"><![CDATA[Data Pengunjung & Pesanan]]></string>
    <string name="event">Promosi</string>
    <string name="jangka_waktu">Jangka Waktu</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="judul_event">Judul Promosi</string>
    <string name="tambah_data_promosi">Tambah Data Promosi</string>
    <string name="pemesan">Pemesan</string>

    <string-array name="durasi">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="jam_mulai_selesai_reservasi">
        <item>11.00</item>
        <item>12.00</item>
        <item>13.00</item>
        <item>14.00</item>
        <item>15.00</item>
        <item>16.00</item>
        <item>17.00</item>
        <item>18.00</item>
        <item>19.00</item>
        <item>20.00</item>
        <item>21.00</item>
        <item>22.00</item>
    </string-array>

    <string-array name="array_flakes">
        <item>Corn Flakes</item>
        <item>Fruit Loops</item>
        <item>Koko Krunch</item>
        <item>Honey Stars</item>
    </string-array>

    <string-array name="array_rasa_es_krim">
        <item>Vanilla</item>
        <item>Taro</item>
        <item>Ogura</item>
        <item>Green Tea</item>
        <item>Strawberry</item>
        <item>Chocolate</item>
    </string-array>

    <string-array name="array_topping">
        <item>Milo</item>
        <item>Oreo</item>
        <item>Choco Chips</item>
        <item>Sprinkles</item>
        <item>Palm Sugar</item>
        <item>Marshmallow</item>
        <item>Nutella</item>
        <item>Pocky</item>
    </string-array>

    <string-array name="array_minuman">
        <item>Tea</item>
        <item>Sweet Tea</item>
        <item>Lemon Tea</item>
        <item>Thai Tea</item>
        <item>Green Tea</item>
        <item>Chocolate</item>
        <item>Mineral Water</item>
    </string-array>

    <string-array name="spinner_statistik_bulan_tahun">
        <item>Jan 2016</item>
        <item>Feb 2016</item>
        <item>Mar 2016</item>
        <item>Apr 2016</item>
    </string-array>

    <string-array name="spinner_statistik_jenis">
        <item>Flakes</item>
        <item>Rasa</item>
        <item>Topping</item>
        <item>Minuman</item>
    </string-array>
</resources>
