<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorWhite"
    tools:context="com.tifaniwarnita.ciccatalystcore.admin.TambahEventDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/cic_logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/cic_icon_launcher"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tambah_data_promosi"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:theme="@style/FormInputLabelDialog">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_judul_promosi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/judul_event"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:theme="@style/FormInputLabelDialog">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_jangka_waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/jangka_waktu"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:theme="@style/FormInputLabelDialog">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/deskripsi"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/button_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/batal"
            android:background="@color/colorAccentThree" />

        <Button
            android:id="@+id/button_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tambah"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
