<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorWhite"
    tools:context="com.tifaniwarnita.ciccatalystcore.kasir.TambahReservasiDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/cic_logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/cic_icon_launcher"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/reservasi_tempat"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        android:text="@string/tanggal"/>

    <TextView
        android:id="@+id/text_view_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:text="15/06/2016"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/waktu_mulai"/>

            <Spinner
                android:id="@+id/spinner_waktu_mulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/waktu_selesai"/>

            <Spinner
                android:id="@+id/spinner_waktu_selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/button_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="BATAL"
            android:background="@color/colorAccentThree" />

        <Button
            android:id="@+id/button_reservasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="RESERVASI"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
